Bug 362175 - Can't create pppoe connection using KNetworkManager
Summary: Can't create pppoe connection using KNetworkManager
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Lukáš Tinkl
URL: https://drive.google.com/file/d/0B0KO...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-24 05:52 UTC by Alexander
Modified: 2024-12-23 18:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2016-04-24 05:52:02 UTC
When trying to create DSL (pppoe) connection I fail because OK button is always disabled and I can't click it to save my new connection. Unless I do some magic gestures the button keeps being disabled. I manage to make it enabled by switching to the IPV4 tab and changing of connection method and then returning it back to Automatic mode.

Reproducible: Always

Steps to Reproduce:
1. Click "Add new connection" button and choose DSL connection type
2. On the DSL tab enter username and password
3. On the DSL tab enter some random name of Service
4. Switch to IPV4 tab
5. Change Connection method to some other value
6. Return it back to Automatic mode
7. Switch to DSL tab and remove the Service name you entered on step 3

Actual Results:  
Connection button becomes enabled after step 6

Expected Results:  
Connection button becomes enabled after step 2 (in my case name of Service is not necessary)
Comment 1 Alexander 2016-04-24 06:15:32 UTC
I attached video that show how to reproduce this bug. See it above.
Comment 2 Lamarque V. Souza 2016-04-24 13:25:13 UTC
Git commit c2be0336226cf27263ed234f69cddd3b5214c267 by Lamarque V. Souza.
Committed on 24/04/2016 at 13:23.
Pushed by lvsouza into branch 'Plasma/5.6'.

Fix data validation when creating new pppoe connections.
FIXED-IN: 5.6.4

M  +3    -1    libs/editor/settings/pppoewidget.cpp
M  +5    -1    libs/editor/settings/ui/pppoe.ui

http://commits.kde.org/plasma-nm/c2be0336226cf27263ed234f69cddd3b5214c267
Comment 3 Pulfer 2016-07-28 03:11:28 UTC
(In reply to Lamarque V. Souza from comment #2)
> Git commit c2be0336226cf27263ed234f69cddd3b5214c267 by Lamarque V. Souza.
> Committed on 24/04/2016 at 13:23.
> Pushed by lvsouza into branch 'Plasma/5.6'.
> 
> Fix data validation when creating new pppoe connections.
> FIXED-IN: 5.6.4

Looks like this commit wasn't merged to master back then. So it didn't get into Plasma 5.7 branch. And the bug still exists in Plasma NM 5.7.2.
Comment 4 Lamarque V. Souza 2016-07-28 12:12:24 UTC
Git commit 31b7547ce99281e8de5eb457fd36b924b53bcac0 by Lamarque V. Souza.
Committed on 28/07/2016 at 12:11.
Pushed by lvsouza into branch 'master'.

Fix data validation when creating new pppoe connections.
FIXED-IN: 5.7.3

M  +3    -1    libs/editor/settings/pppoewidget.cpp
M  +5    -1    libs/editor/settings/ui/pppoe.ui

http://commits.kde.org/plasma-nm/31b7547ce99281e8de5eb457fd36b924b53bcac0
Comment 5 Lamarque V. Souza 2016-07-28 13:21:33 UTC
Git commit ad421d63cdeb9751dfd4f411e6c114a703b9e3e9 by Lamarque V. Souza.
Committed on 28/07/2016 at 13:20.
Pushed by lvsouza into branch 'Plasma/5.7'.

Fix data validation when creating new pppoe connections.
FIXED-IN: 5.7.3

M  +3    -1    libs/editor/settings/pppoewidget.cpp
M  +5    -1    libs/editor/settings/ui/pppoe.ui

http://commits.kde.org/plasma-nm/ad421d63cdeb9751dfd4f411e6c114a703b9e3e9