Fix data validation when creating new pppoe connections.

BUG: 362175
FIXED-IN: 5.6.4